static/css/base.css
html {
    height: 100%;
}

.logo-font {
    text-transform: uppercase;
}

.main-logo-link {
    width: fit-content;
}

.text-black {
    color: black !important;
}

.list-inline-item {
    display: inline-flex;
}
/*------------------------------------- Media Queries */

@media (min-width: 1200px) {
    .container {
        max-width: 80%;
    }
}

@media (min-width: 992px) { /*--------------------------- fixed navbar only on medium screens and higher */
   .fixed-top-desktop-only {
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    z-index: 1030;
    }

    .header-continer {
        padding-top: 164px;
    }
}

